--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
+        <kafka_version>0.9.0.0</kafka_version>
     </properties>
 
     <dependencies>
@@ -30,8 +31,10 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_2.11</artifactId>
-            <version>0.9.0.0</version>
+            <version>${kafka_version}</version>
         </dependency>
+
+
 
     </dependencies>
 
